weblibmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblibmanager
spec:
  selector:
    app: weblibmanager
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
