weblibmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weblibmanager-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - weblibmanager.ozeliurs.com
      secretName: weblibmanager-tls
  rules:
    - host: weblibmanager.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weblibmanager
                port:
                  number: 8000
